# pcd_adas

./: .gitignore  README.md  allfiles.txt
best-11 training/Datasets/: datasets_table
best-11 training/notebook/: detection-ok (2).ipynb
demo/: link
devel/: .catkin
devel/include/carla_ackermann_control/: EgoVehicleControlParameterConfig.h
devel/include/carla_ackermann_msgs/: EgoVehicleControlCurrent.h  EgoVehicleControlInfo.h  EgoVehicleControlMaxima.h  EgoVehicleControlStatus.h  EgoVehicleControlTarget.h
devel/include/carla_ros_scenario_runner_types/: CarlaScenario.h  CarlaScenarioList.h  CarlaScenarioRunnerStatus.h  ExecuteScenarioRequest.h  ExecuteScenarioResponse.h
devel/include/carla_waypoint_types/: CarlaWaypoint.h  GetActorWaypointRequest.h  GetActorWaypointResponse.h  GetWaypointRequest.h  GetWaypointResponse.h
devel/lib/carla_ros_scenario_runner/: application_runner.py  ros_vehicle_control.py
devel/lib/pcl_recorder/: pcl_recorder_node
devel/lib/pkgconfig/: carla_ackermann_control.pc  carla_ackermann_msgs.pc  carla_ad_agent.pc  carla_ad_demo.pc  carla_common.pc  carla_manual_control.pc  carla_msgs.pc  carla_ros_bridge.pc  carla_ros_scenario_runner.pc  carla_ros_scenario_runner_types.pc  carla_spawn_objects.pc  carla_twist_to_control.pc  pcl_recorder.pc  (+6 more)
src/adas_pkg/: CMakeLists.txt  package.xml
src/adas_pkg/launch/: adas_complete.launch  lane_only.launch  run_adas_lane.sh
src/adas_pkg/src/: carla_adas_world.py  decision_node.py  display_node.py  lane_detection_node.py  lane_viewer_node.py  object_detection_node.py  radar_bridge_node.py
(+44 files in other folders)
