<?xml version="1.0"?>
<package format="2">
  <name>adas_pkg</name>
  <version>1.0.0</version>
  <description>ADAS System</description>
  <maintainer email="fedi@adas.com">fedi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
</package>
